CORBA transfer tester server and client implementation